--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -14,6 +14,7 @@ $accent: linear-gradient(to top right, #FFC593, #BC7198, #5A77FF) ;
   padding:0;
   box-sizing: border-box;
   text-rendering: geometricPrecision;
+  image-rendering: smooth;
 }
 
 html {
@@ -27,9 +28,14 @@ body {
 h1, h2 { @include setTypo(40px, 48px); }
 h3 { @include setTypo(18px, 25px); }
 h4{ @include setTypo(12px, 16px); }
+h1, h2, h3, h4 { text-transform: uppercase;}
 
 a { 
   text-decoration: none;
   color: inherit;
+}
+
+img {
+  max-width: 100%;
 }
 
