feat: stories card implementation in home page

--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -22,7 +22,9 @@ html {
 };
 
 body { 
-  @include setTypo(15px, 25px); 
+  @include setTypo(15px, 25px);
+  max-width: 1440px;
+  margin:0 auto; 
   font-weight: 400;
 }
 h1, h2 { @include setTypo(40px, 48px); }
